tests/ui/stability-attribute/accidental-stable-in-unstable.stderr
error[E0658]: use of unstable library feature `unicode_internals`
  --> $DIR/accidental-stable-in-unstable.rs:6:5
   |
LL | use core::unicode::UNICODE_VERSION;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unicode_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

warning: use of deprecated module `std::intrinsics`: import this function via `std::mem` instead
  --> $DIR/accidental-stable-in-unstable.rs:10:23
   |
LL | use core::intrinsics::transmute; // depended upon by rand_core
   |                       ^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
